# agentgateway

./: .gitattributes  .gitignore  .goreleaser.yaml  CODE_OF_CONDUCT.md  CONTRIBUTION.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.windows  Makefile  README.md  SECURITY.md  Tiltfile  buf.gen.yaml  buf.yaml  cargo-docker.config.toml  deny.toml  go.mod  go.sum  modern.yaml  rust-toolchain.toml  test.yaml
crates/agentgateway-app/: Cargo.toml
crates/agentgateway-app/src/: lib.rs  main.rs
crates/agentgateway-app/src/commands/: migrate.rs  mod.rs  run.rs
crates/cel-fork/cel-derive/: Cargo.toml  README.md
crates/cel-fork/cel-derive/src/: lib.rs
crates/cel-fork/cel-derive/tests/: expand.rs
crates/cel-fork/cel-derive/tests/expand/: comprehensive.expanded.rs  comprehensive.rs  edge_cases.expanded.rs  edge_cases.rs
crates/celx/: Cargo.toml
crates/celx/benches/: cel_bench.rs
crates/celx/src/: benches.rs  cidr.rs  flatten.rs  function_tests.rs  general.rs  lib.rs  math.rs  optimize.rs  strings.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: assertions.rs  bow.rs  drain.rs  env.rs  lib.rs  metrics.rs  prelude.rs  serdes.rs  telemetry.rs  timestamp.rs  tokio_metrics.rs
crates/htpasswd-verify-fork/: Cargo.toml
crates/htpasswd-verify-fork/src/: lib.rs  md5.rs
crates/http/: Cargo.toml
crates/http/src/: lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: anthropic.rs  azure.rs  bedrock.rs  copilot.rs  custom.rs  gemini.rs  golden_tests.rs  lib.rs  openai.rs  tokenizer.rs  vertex.rs
crates/llm/src/conversion/: bedrock.rs  bedrock_tests.rs  completions.rs  gemini.rs  messages.rs  mod.rs  openai_compat.rs  rerank_tests.rs  responses.rs  vertex.rs  vertex_tests.rs
crates/llm/src/parse/: aws_sse.rs  mod.rs  parse_tests.rs  passthrough.rs  sse.rs  transform.rs
crates/llm/src/tests/requests/completions/: basic.anthropic.snap  basic.bedrock.snap  cache-points.anthropic.snap  cache-points.bedrock.snap  cache-points.json  full.anthropic.snap  full.bedrock.snap  full.get-messages-messages.snap  parallel-tool-call.bedrock.snap  reasoning.anthropic.snap  reasoning.bedrock.snap  reasoning_max.anthropic.snap  reasoning_max.json  reasoning_replay.bedrock.snap  reasoning_replay_unsigned.bedrock.snap  reasoning_replay_unsigned.json  tool-call.anthropic.snap  tool-call.bedrock.snap
crates/llm/src/tests/requests/count-tokens/: basic.anthropic.snap  basic.bedrock.snap  basic.json  basic.vertex.snap  with_system.anthropic.snap  with_system.bedrock.snap  with_system.vertex.snap
crates/llm/src/tests/requests/embeddings/: array.bedrock-cohere.snap  array.json  array.openai.snap  array.vertex.snap  basic.bedrock-cohere.snap  basic.bedrock-titan.snap  basic.openai.snap  basic.vertex.snap
crates/llm/src/tests/requests/messages/: basic.anthropic.snap  basic.bedrock.snap  basic.vertex.snap  cache-points-unsupported.completions.snap  cache-points-unsupported.json  cache-points.completions.snap  cache-points.json  gpt_adaptive_thinking_with_tools.completions.snap  gpt_adaptive_thinking_with_tools.json  reasoning.anthropic.snap  reasoning.bedrock.snap  reasoning.completions.snap  reasoning.vertex.snap  reasoning_replay.bedrock.snap  system_message.bedrock.snap  system_message.completions.snap  system_message.json  system_message.vertex.snap  tools.bedrock.snap  tools.completions.snap  tools.vertex.snap
crates/llm/src/tests/requests/policies/: anthropic_with_system.anthropic.snap  openai_with_inputs.openai.snap  openai_with_messages.openai.snap  openai_with_text_input.openai.snap
crates/llm/src/tests/requests/rerank/: basic.bedrock.snap  basic.cohere.snap  basic.json  basic.vertex.snap  passthrough-fields.bedrock.snap  passthrough-fields.cohere.snap  passthrough-fields.json  passthrough-fields.vertex.snap
crates/llm/src/tests/requests/responses/: assistant-history.get-messages-responses.snap  assistant-history.openai.snap  basic.bedrock.snap  basic.gemini.snap  input-list.bedrock.snap  input-list.gemini.snap  instructions.bedrock.snap  instructions.gemini.snap  parallel-tool-call.bedrock.snap  parallel-tool-call.gemini.snap
crates/llm/src/tests/response/anthropic/: basic.json  basic.messages-completions.snap  basic.messages-detect.snap  basic.messages-messages.snap  count_tokens.anthropic.snap  multiple_text_blocks.messages-completions.snap  multiple_text_blocks.messages-detect.snap  multiple_text_blocks.messages-messages.snap  stream_basic.json  stream_basic.messages-completions-streaming.snap  stream_basic.messages-detect-streaming.snap  stream_basic.messages-messages-streaming.snap  stream_thinking.messages-completions-streaming.snap  stream_thinking.messages-detect-streaming.snap  stream_thinking.messages-messages-streaming.snap  thinking.messages-completions.snap  thinking.messages-detect.snap  thinking.messages-messages.snap  tool.messages-completions.snap  tool.messages-detect.snap  tool.messages-messages.snap
crates/llm/src/tests/response/bedrock/: basic.bedrock-completions-streaming.snap  basic.bedrock-completions.snap  basic.bedrock-messages-streaming.snap  basic.bedrock-messages.snap  basic.bedrock-responses-streaming.snap  basic.bedrock-responses.snap  cache_write.bedrock-completions.snap  reasoning.bedrock-completions-streaming.snap  reasoning.bedrock-completions.snap  reasoning.bedrock-messages-streaming.snap  reasoning.bedrock-messages.snap  reasoning.bedrock-responses-streaming.snap  reasoning.bedrock-responses.snap  reasoning_unsigned.bedrock-completions.snap  reasoning_unsigned.bedrock-messages.snap  reasoning_unsigned.bedrock-responses.snap  reasoning_unsigned.json  (+8 more)
crates/llm/src/tests/response/bedrock-cohere/: embeddings.bedrock-cohere.snap
crates/llm/src/tests/response/bedrock-titan/: embeddings.bedrock-titan.snap
crates/llm/src/types/: bedrock.rs  completions.rs  count_tokens.rs  detect.rs  embeddings.rs  messages.rs  mod.rs  rerank.rs  responses.rs  vertex.rs
crates/protos/: Cargo.toml  build.rs
crates/protos/proto/: ext_authz.proto  ext_mcp.proto  ext_proc.proto  resource.proto  rls.proto  xds.proto
crates/protos/src/: lib.rs
(+1934 files in other folders)
