[package]
name = "agentgateway-app"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[[bin]]
name = "agentgateway"
path = "src/main.rs"
bench = false

[features]
# Jemalloc has been found to have the highest throughput and best ability to return memory to the system
# This comes at the small cost of a few mb memory overhead relative to others (most notable in an empty setup).
default = ["jemalloc"]
glibc = ["agentgateway/glibc"]
jemalloc = ["dep:tikv-jemallocator", "agentgateway/jemalloc"]
mimalloc = ["dep:mimalloc", "agentgateway/mimalloc"]
schema = ["agentgateway/schema"]

[dependencies]
pprof-alloc.workspace = true
agent-core.workspace = true
agentgateway.workspace = true
anyhow.workspace = true
clap.workspace = true
fs-err = { workspace = true, features = ["tokio"] }
libc.workspace = true
mimalloc = { workspace = true, optional = true }
tokio.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = { workspace = true, optional = true }

[lints.clippy]
# This rule makes code more confusing
assigning_clones = "allow"
# This doesn't understand `strng` which we use everywhere
borrow_interior_mutable_const = "allow"
declare_interior_mutable_const = "allow"
