[package]
name = "agent-llm"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[lib]
path = "src/lib.rs"

[features]
schema = ["schemars", "agent-core/schema"]

[dependencies]
agent-core.workspace = true
agent-http.workspace = true
anyhow.workspace = true
async-openai.workspace = true
aws-credential-types.workspace = true
aws-smithy-eventstream.workspace = true
aws-smithy-types.workspace = true
azure_core.workspace = true
axum.workspace = true
axum-core.workspace = true
base64.workspace = true
bytes.workspace = true
cel.workspace = true
chrono.workspace = true
futures-core.workspace = true
futures-util.workspace = true
headers.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
itertools.workspace = true
mime_guess.workspace = true
percent-encoding.workspace = true
pin-project-lite.workspace = true
rand.workspace = true
schemars = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
serde_regex.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tiktoken-rs.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio_sse_codec.workspace = true
tracing.workspace = true
vector-map.workspace = true
x509-parser.workspace = true

[dev-dependencies]
insta.workspace = true
rstest.workspace = true
